--- a/clinic_management/user/templates/login.html
+++ b/clinic_management/user/templates/login.html
@@ -3,18 +3,23 @@
 {% block content %}
   <div class="container mt-5">
     <div class="row justify-content-center">
-      <div class="col-md-6">
-        <div class="card">
+      <div class="col-md-6" style="margin-top: 40px;">
+        <div class="card mt-5">
           <div class="card-header">Iniciar Sesión</div>
           <div class="card-body">
+            {% for message in messages %}
+              <div class="alert alert-danger">
+                {{ message }}
+              </div>
+            {% endfor %}
             <form method="post">
               {% csrf_token %}
-              {{ form.username.label_tag }}
               <div class="form-group">
+                {{ form.username.label_tag }}
                 {{ form.username }}
               </div>
-              {{ form.password.label_tag }}
               <div class="form-group">
+                {{ form.password.label_tag }}
                 {{ form.password }}
               </div>
               <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
@@ -25,3 +30,4 @@
     </div>
   </div>
 {% endblock %}
+
