--- a/clinic_management/mainapp/templates/layouts/layout.html
+++ b/clinic_management/mainapp/templates/layouts/layout.html
@@ -21,12 +21,16 @@
                     <li class="nav-item">
                         <a class="navbar-brand font-italic" href=''> Gestion Clinica </a>
                     </li>
+                </ul>
+    
+                <!-- Mueve los elementos de la barra de navegación a la derecha -->
+                <ul class="navbar-nav ml-auto">
                     {% block navbar %}
-
+    
                     {% endblock %}
-                </ul> 
-            </div>   
-        </div>   
+                </ul>
+            </div>
+        </div>
     </nav>
 
     <div class="container mt-4">
