--- a/clinic_management/personaladministrativo/templates/crear_paciente.html
+++ b/clinic_management/personaladministrativo/templates/crear_paciente.html
@@ -25,6 +25,15 @@
         <div class="card">
           <div class="card-header text-center">Registro</div>
           <div class="card-body">
+            {% if messages %}
+            <div class="alert alert-danger" role="alert">
+              <ul>
+                {% for message in messages %}
+                <li>{{ message }}</li>
+                {% endfor %}
+              </ul>
+            </div>
+            {% endif %}
             <form method="post">
               {% csrf_token %}
               <div class="row">
@@ -73,13 +82,19 @@
                     {{ form.nombre_compania_seguro.label_tag }}
                     {{ form.nombre_compania_seguro }}
                   </div>
-                  <div class="form-group mt-5">
-                    <div class="form-check">
+                  <div class="form-group">
+                    {{ form.numero_poliza_seguro.label_tag }}
+                    {{ form.numero_poliza_seguro }}
+                  </div>  
+                  <div class="form-group">
+                    {{ form.genero.label_tag }}
+                    {{ form.genero }}
+                  </div> 
+                  <div class="form-group">
+                    <label class="custom-control custom-checkbox" style="margin: 0; font-size: 13px;">  
                       {{ form.estado_poliza_seguro }}
                       {{ form.estado_poliza_seguro.label_tag }}
-                    </div>
-                  </div>
-                  <div class="form-group text-center mt-5">
+                    </label>
                     <button type="submit" class="btn btn-primary" style="width: 100%; background-color: rgb(128, 0, 128); border-color: rgb(128, 0, 128);">Registrar Paciente</button>
                   </div>
                 </div>
