--- a/clinic_management/personaladministrativo/templates/personaladministrativo.html
+++ b/clinic_management/personaladministrativo/templates/personaladministrativo.html
@@ -2,7 +2,7 @@
 
 {% block navbar %}
 <li class="nav-item">
-    <a class="nav-link" href={% url 'crear_paciente'%}> Registro de Pacientes </a>
+    <a class="nav-link" href={% url 'crear_paciente' %}> Registro de Pacientes </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href=''> Actualizar Informacion </a>
@@ -14,7 +14,7 @@
     <a class="nav-link" href=''> Seguros Medicos </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="{% url 'logout_view' %}"> Cerrar Sesion </a>
+    <a class="nav-link" href={% url 'logout_view' %}> Cerrar Sesion </a>
 </li>
 {% endblock %}
 
