API en modo put
Se implementa el proceso de busqueda y actualizacion de pacientes

--- a/clinic_management/personaladministrativo/templates/crear_paciente.html
+++ b/clinic_management/personaladministrativo/templates/crear_paciente.html
@@ -5,7 +5,7 @@
     <a class="nav-link" href={% url 'crear_paciente' %}> Registro de Pacientes </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href=''> Actualizar Informacion </a>
+    <a class="nav-link" href={% url 'buscar_paciente' %}> Actualizar Informacion </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href=''> Facturacion </a>
