--- a/clinic_management/personaladministrativo/templates/buscar_paciente.html
+++ b/clinic_management/personaladministrativo/templates/buscar_paciente.html
@@ -14,7 +14,7 @@
       <a class = "nav-link" href=''> Seguros Medicos </a>
   </li>
   <li class="nav-item">
-      <a class="nav-link" href="{% url 'logout_view' %}"> Cerrar Sesion </a>
+      <a class="nav-link" href={% url 'logout_view' %}> Cerrar Sesion </a>
   </li>
   {% endblock %}
 
