--- a/clinic_management/personaladministrativo/templates/actualizar_paciente.html
+++ b/clinic_management/personaladministrativo/templates/actualizar_paciente.html
@@ -22,75 +22,78 @@
 <div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-10">
-            <form method="post">
-                {% csrf_token %}
-                <div class="form-group">
-                    <div class="input-group mb-3">
-                        {{ form.numero_identificacion }}
-                        <div class="input-group-append">
-                            <button class="btn btn-primary" type="submit">Actualizar</button>
-                        </div>
+            <div class="card mt-5">
+                <div class="card-header text-center">Actualizar</div>
+                    <div class="card-body">
+                        <form method="post">
+                            {% csrf_token %}
+                            <div class="row">
+                                <div class="col-md-4">
+                                <div class="form-group">
+                                    {{ form.nombre_completo.label_tag }}
+                                    {{ form.nombre_completo }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.numero_identificacion.label_tag }}
+                                    {{ form.numero_identificacion }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.correo_electronico.label_tag }}
+                                    {{ form.correo_electronico }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.numero_telefono.label_tag }}
+                                    {{ form.numero_telefono }}
+                                </div>
+                                </div>
+                                <div class="col-md-4">
+                                <div class="form-group">
+                                    {{ form.fecha_nacimiento.label_tag }}
+                                    {{ form.fecha_nacimiento }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.nombre_contacto_emergencia.label_tag }}
+                                    {{ form.nombre_contacto_emergencia }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.relacion_contacto_emergencia.label_tag }}
+                                    {{ form.relacion_contacto_emergencia }}
+                                </div>
+                                <div class="form-group">
+                                    {{ form.numero_telefono_emergencia.label_tag }}
+                                    {{ form.numero_telefono_emergencia }}
+                                </div>
+                                </div>
+                                <div class="col-md-4">
+                                    <div class="form-group">
+                                        {{ form.direccion.label_tag }}
+                                        {{ form.direccion }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form.nombre_compania_seguro.label_tag }}
+                                        {{ form.nombre_compania_seguro }}
+                                    </div>
+                                    <div class="form-group">
+                                        {{ form.numero_poliza_seguro.label_tag }}
+                                        {{ form.numero_poliza_seguro }}
+                                    </div>  
+                                    <div class="form-group">
+                                        {{ form.genero.label_tag }}
+                                        {{ form.genero }}
+                                    </div> 
+                                    <div class="form-group">
+                                        <label class="custom-control custom-checkbox" style="margin: 0; font-size: 13px;">  
+                                            {{ form.estado_poliza_seguro }}
+                                            {{ form.estado_poliza_seguro.label_tag }}
+                                        </label>
+                                        <button type="submit" class="btn btn-primary" style="width: 100%; background-color: rgb(128, 0, 128); border-color: rgb(128, 0, 128);">Actualizar Paciente</button>
+                                    </div>
+                                </div>
+                            </div>          
+                        </form>
                     </div>
                 </div>
-                <div class="form-group">
-                    {{ form.numero_identificacion.label_tag }}
-                    {{ form.numero_identificacion }}
-                    {{ form.numero_identificacion.errors }}
-                </div>
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="form-group">
-                            {{ form.nombre_completo.label_tag }}
-                            {{ form.nombre_completo }}
-                        </div>
-                        <!-- Agrega aquí los otros campos del formulario -->
-                        <div class="form-group">
-                            {{ form.fecha_nacimiento.label_tag }}
-                            {{ form.fecha_nacimiento }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.genero.label_tag }}
-                            {{ form.genero }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.direccion.label_tag }}
-                            {{ form.direccion }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.numero_telefono.label_tag }}
-                            {{ form.numero_telefono }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.correo_electronico.label_tag }}
-                            {{ form.correo_electronico }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.nombre_contacto_emergencia.label_tag }}
-                            {{ form.nombre_contacto_emergencia }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.relacion_contacto_emergencia.label_tag }}
-                            {{ form.relacion_contacto_emergencia }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.numero_telefono_emergencia.label_tag }}
-                            {{ form.numero_telefono_emergencia }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.nombre_compania_seguro.label_tag }}
-                            {{ form.nombre_compania_seguro }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.numero_poliza_seguro.label_tag }}
-                            {{ form.numero_poliza_seguro }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.estado_poliza_seguro.label_tag }}
-                            {{ form.estado_poliza_seguro }}
-                        </div>
-                    </div>
-                </div>
-            </form>
+            </div>      
         </div>
     </div>
 </div>
