--- a/clinic_management/medicos/templates/crear_historia.html
+++ b/clinic_management/medicos/templates/crear_historia.html
@@ -2,7 +2,7 @@
 
 {% block navbar %}
 <li class="nav-item">
-    <a class="nav-link" href={% url 'crear_paciente' %}> Registro de Pacientes </a>
+    <a class="nav-link" href={% url 'crear_historia_clinica' %}> Crear Historia Clinica </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href={% url 'buscar_paciente' %}> Actualizar Información </a>
