Agregar medicamentos a una orden
Se instancia la vista de agregado de medicamentos a una orden, y a una historia clinica

--- a/clinic_management/medicos/templates/crear_historia.html
+++ b/clinic_management/medicos/templates/crear_historia.html
@@ -5,7 +5,7 @@
     <a class="nav-link" href={% url 'crear_historia_clinica' %}> Crear Historia Clinica </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href={% url 'buscar_paciente' %}> Actualizar Información </a>
+    <a class="nav-link" href={% url 'agregar_ordenes' %}> Agregar Información </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href=''> Facturación </a>
