--- a/clinic_management/medicos/templates/elegir_orden_con_id.html
+++ b/clinic_management/medicos/templates/elegir_orden_con_id.html
@@ -31,7 +31,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Medicamento</h5>
                                     <p class="card-text">Agregar una orden de medicamento.</p>
-                                    <a href="" class="btn btn-primary">Agregar Medicamento</a> 
+                                    <a href="{% url 'agregar_medicamento' id_historia_medica %}" class="btn btn-primary">Agregar Medicamento</a> 
                                 </div>
                             </div>
                         </div>
