--- a/clinic_management/medicos/templates/elegir_orden_con_id.html
+++ b/clinic_management/medicos/templates/elegir_orden_con_id.html
@@ -40,7 +40,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Procedimiento</h5>
                                     <p class="card-text">Agregar una orden de procedimiento.</p>
-                                    <a href="" class="btn btn-primary">Agregar Procedimiento</a>
+                                    <a href="{% url 'agregar_procedimiento' id_historia_medica %}" class="btn btn-primary">Agregar Procedimiento</a>
                                 </div>
                             </div>
                         </div>
