--- a/clinic_management/medicos/templates/agregar_ayuda_diagnostica.html
+++ b/clinic_management/medicos/templates/agregar_ayuda_diagnostica.html
@@ -5,10 +5,10 @@
     <a class="nav-link" href={% url 'crear_historia_clinica' %}> Crear Historia Clinica </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href={% url 'agregar_ordenes' %}> Agregar Información </a>
+    <a class="nav-link" href={% url 'agregar_ordenes' %}> Actualizar Información </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href=''> Facturación </a>
+    <a class="nav-link" href=''> Facturación </a>   
 </li>
 <li class="nav-item">
     <a class="nav-link" href=""> Seguros Médicos </a>
@@ -18,12 +18,13 @@
 </li>
 {% endblock %}
 
+
 {% block content %}
 <div class="container mt-4">
     <div class="row justify-content-center">
         <div class="col-md-10">
             <div class="card mt-5">
-                <div class="card-header text-center">Formulario de Historia Clínica</div>
+                <div class="card-header text-center">Agregar Ayuda Diagnostica</div>
                 <div class="card-body">
                     {% if messages %}
                         {% for message in messages %}
@@ -40,35 +41,8 @@
                     {% endif %}
                     <form method="post">
                         {% csrf_token %}
-                        <div class="form-group">
-                            {{ form.fecha.label_tag }}
-                            {{ form.fecha }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.medico.label_tag }}
-                            {{ form.medico }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.paciente.label_tag }}
-                            {{ form.paciente }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.motivo_consulta.label_tag }}
-                            {{ form.motivo_consulta }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.sintomatologia.label_tag }}
-                            {{ form.sintomatologia }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.diagnostico.label_tag }}
-                            {{ form.diagnostico }}
-                        </div>
-                        <div class="form-group">
-                            {{ form.ordenes.label_tag }}
-                            {{ form.ordenes }}
-                        </div>
-                        <button type="submit" class="btn btn-primary" style="width: 100%; background-color: rgb(128, 0, 128); border-color: rgb(128, 0, 128);">Guardar Historia Clínica</button>
+                        {{ form.as_p }}
+                        <button type="submit" class="btn btn-primary">Guardar Ayuda Diagnostica</button>
                     </form>
                 </div>
             </div>
