--- a/clinic_management/medicos/templates/agregar_procedimiento.html
+++ b/clinic_management/medicos/templates/agregar_procedimiento.html
@@ -8,7 +8,7 @@
     <a class="nav-link" href={% url 'agregar_ordenes' %}> Actualizar Información </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href=''> Facturación </a>   
+    <a class="nav-link" href={% url 'buscar_estado_historia' %}> Cambiar Estados Historia Clinica </a>   
 </li>
 <li class="nav-item">
     <a class="nav-link" href=""> Seguros Médicos </a>
