--- a/clinic_management/medicos/templates/elegir_orden_historia.html
+++ b/clinic_management/medicos/templates/elegir_orden_historia.html
@@ -20,7 +20,7 @@
     <div class="row justify-content-center mt-5">
         <div class="col-md-6 align-items-center">
             <div class="card">
-                <div class="card-header text-center">Agregar Ordenes a Historia Clinica</div>
+                <div class="card-header text-center">Modificar Historia Clinica </div>
                   <div class="card-body" >
                       {% if messages %}
                           {% for message in messages %}
