--- a/clinic_management/personaladministrativo/templates/crear_paciente.html
+++ b/clinic_management/personaladministrativo/templates/crear_paciente.html
@@ -8,7 +8,7 @@
     <a class="nav-link" href={% url 'buscar_paciente' %}> Actualizar Informacion </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href=''> Facturacion </a>
+    <a class="nav-link" href={% url 'buscar_paciente_facturacion' %}> Facturacion </a>
 </li>
 <li class="nav-item">
     <a class = "nav-link" href=''> Seguros Medicos </a>
