--- a/clinic_management/personaladministrativo/templates/buscar_paciente_facturacion.html
+++ b/clinic_management/personaladministrativo/templates/buscar_paciente_facturacion.html
@@ -8,10 +8,7 @@
     <a class="nav-link" href={% url 'buscar_paciente' %}> Actualizar Información </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="#"> Facturación </a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="#"> Seguros Médicos </a>
+    <a class="nav-link" href={% url 'buscar_paciente_facturacion' %}> Facturacion </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href={% url 'logout_view' %}> Cerrar Sesión </a>
