--- a/clinic_management/personaladministrativo/templates/actualizar_paciente.html
+++ b/clinic_management/personaladministrativo/templates/actualizar_paciente.html
@@ -22,6 +22,19 @@
             <div class="card mt-5">
                 <div class="card-header text-center">Actualizar</div>
                     <div class="card-body">
+                        {% if messages %}
+                            {% for message in messages %}
+                            {% if message.tags == 'success' %}
+                                <div class="alert alert-success" role="alert" id="Errorcito">
+                                {{ message }}
+                                </div>
+                            {% elif message.tags == 'error' %}
+                                <div class="alert alert-danger" role="alert" id="Errorcito">
+                                {{ message }}
+                                </div>
+                            {% endif %}
+                            {% endfor %}
+                        {% endif %}
                         <form method="post">
                             {% csrf_token %}
                             <div class="row">
@@ -94,4 +107,12 @@
         </div>
     </div>
 </div>
+<script>
+    setTimeout(function () {
+        var errorMessage = document.getElementById("Errorcito");
+        if (errorMessage) {
+            errorMessage.style.display = "none";
+        }
+    }, 4000);
+</script>
 {% endblock %}
