Enfermeras.views en orden
Se instancian los metodos de registro de visitas

--- a/clinic_management/medicos/templates/elegir_orden_con_id.html
+++ b/clinic_management/medicos/templates/elegir_orden_con_id.html
@@ -68,7 +68,7 @@
                                 <div class="card-body">
                                     <h5 class="card-title">Hospitalizar</h5>
                                     <p class="card-text">Hospitalizar al paciente.</p>
-                                    <a href="" class="btn btn-primary">Ordenar Hispializacion</a>
+                                    <a href="{% url 'agregar_hospitalizacion' id_historia_medica %}" class="btn btn-primary">Ordenar Hispializacion</a>
                                 </div>
                             </div>
                         </div>
