--- a/clinic_management/user/templates/login.html
+++ b/clinic_management/user/templates/login.html
@@ -25,7 +25,7 @@
                 {{ form.password.label_tag }}
                 {{ form.password }}
               </div>
-              <button type="submit" class="btn btn-primary" style="background-color: rgb(128, 0, 128); border-color: rgb(128, 0, 128);">Iniciar Sesión</button>
+              <button type="submit" class="btn btn-primary">Iniciar Sesión</button>
             </form>
           </div>
         </div>
