--- a/clinic_management/recursoshumanos/templates/registro.html
+++ b/clinic_management/recursoshumanos/templates/registro.html
@@ -82,7 +82,7 @@
                     {{ form.password2 }}
                   </div>
                   <div class="text-center">
-                    <button type="submit" class="btn btn-primary" style="margin-top: 8px; width: 320px;background-color: rgb(128, 0, 128); border-color: rgb(128, 0, 128);">Registrarse</button>
+                    <button type="submit" class="btn btn-primary" style="margin-top: 8px; width: 320px;">Registrarse</button>
                   </div>
                 </div>
               </div>
