Se corrigio boton sin funcionalidad enfermeras
Se habia creado la vista y funcionalidad de registrar visitas a pascientes buscandolos directamente por su cedula, pero no se habia enlazado al boton de la barra de navegacion

--- a/clinic_management/enfermeras/templates/busqueda_visita.html
+++ b/clinic_management/enfermeras/templates/busqueda_visita.html
@@ -5,7 +5,7 @@
     <a class="nav-link" href="{% url 'visitas_pendientes' %}"> Proximas Visitas </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href=''> Registrar Visitas </a>
+    <a class="nav-link" href="{% url 'buscar_visitas' %}"> Registrar Visitas </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{% url 'logout_view' %}"> Cerrar Sesion </a>
