--- a/clinic_management/enfermeras/templates/detalle_visita.html
+++ b/clinic_management/enfermeras/templates/detalle_visita.html
@@ -5,7 +5,7 @@
     <a class="nav-link" href="{% url 'visitas_pendientes' %}"> Proximas Visitas </a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href=''> Registrar Visitas </a>
+    <a class="nav-link" href="{% url 'buscar_visitas' %}"> Registrar Visitas </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{% url 'logout_view' %}"> Cerrar Sesion </a>
