Seleccion de medicamentos en visitas activo
La funcionalidad para seleccion los medicamentos brindados por una enfermera en una visita estan activos

--- a/clinic_management/enfermeras/templates/visitas_pendientes.html
+++ b/clinic_management/enfermeras/templates/visitas_pendientes.html
@@ -14,6 +14,19 @@
 
 {% block content %}
     <div class="container mt-4">
+        {% if messages %}
+            {% for message in messages %}
+                {% if message.tags == 'success' %}
+                    <div class="alert alert-success" role="alert" id="Errorcito">
+                        {{ message }}
+                    </div>
+                {% elif message.tags == 'error' %}
+                    <div class="alert alert-danger" role="alert" id="Errorcito">
+                        {{ message }}
+                    </div>
+                {% endif %}
+            {% endfor %}
+        {% endif %}
         <h2>Visitas Pendientes</h2>
         <div class="row">
             {% for visita in visitas_pendientes %}
@@ -29,4 +42,12 @@
             {% endfor %}
         </div>
     </div>
+    <script>
+        setTimeout(function () {
+            var errorMessage = document.getElementById("Errorcito");
+            if (errorMessage) {
+                errorMessage.style.display = "none";
+            }
+        }, 4000);
+    </script>
 {% endblock %}
