--- a/clinic_management/enfermeras/templates/detalle_visita.html
+++ b/clinic_management/enfermeras/templates/detalle_visita.html
@@ -17,6 +17,19 @@
         <h2>Detalles de la Visita</h2>
         <div class="card">
             <div class="card-body">
+                {% if messages %}
+                {% for message in messages %}
+                    {% if message.tags == 'success' %}
+                        <div class="alert alert-success" role="alert" id="Errorcito">
+                            {{ message }}
+                        </div>
+                    {% elif message.tags == 'error' %}
+                        <div class="alert alert-danger" role="alert" id="Errorcito">
+                            {{ message }}
+                        </div>
+                    {% endif %}
+                {% endfor %}
+                {% endif %}
                 <h5 class="card-title">Visita a {{ visita.paciente.nombre_completo }} cedula: {{ visita.paciente.numero_identificacion }}</h5>
                 <p class="card-text">Fecha de asignacion: {{ visita.fecha }}</p>
                 <form method="post">
@@ -27,4 +40,12 @@
             </div>
         </div>
     </div>
+    <script>
+        setTimeout(function () {
+            var errorMessage = document.getElementById("Errorcito");
+            if (errorMessage) {
+                errorMessage.style.display = "none";
+            }
+        }, 4000);
+    </script>
 {% endblock %}
